feat: status EM_REVISAO/EM_PUBLICACAO, revogacao em 3 etapas e reforma de papeis (EDIT/APROV/PUBLIC)
Implementa o item de curto prazo do roadmap: dois novos status intermediarios
para diferenciar quem esta com o documento em maos durante revisao e
publicacao. Papeis deixam de ser genericos por OM e passam a ser atribuicao
pessoal -- o Editor escolhe, por CPF/nome, um Aprovador especifico da mesma OM
ao enviar para revisao; o Aprovador atribuido escolhe um Publicador especifico
ao aprovar. So a pessoa escolhida pode agir naquele documento naquela etapa
(DocumentoAcessoService.podeMudarStatus).

- PapelEnum: APROVADOR vira APROV (so revisa) + PUBLIC (novo, so publica);
  EDIT passa a ser explicito (antes, toda pessoa logada podia criar/editar
  implicitamente -- ver UsuarioPrincipal/AuthService). ADMIN deixa de ser
  super-papel de documento, vira puramente administrativo.
- DocumentoStatusEnum: EM_REVISAO, EM_PUBLICACAO, ANALISE_REVOGACAO,
  EM_REVOGACAO novos; ARQUIVADO removido (0 documentos usavam).
  Documento.revisorAtribuido/publicadorAtribuido guardam a atribuicao.
- DocumentoStatusService: tabela de transicoes reescrita; aprovar cascateia
  direto para EM_PUBLICACAO na mesma transacao, ja com o publicador escolhido.
  Revogacao vira fluxo de 3 etapas (ANALISE_REVOGACAO -> EM_REVOGACAO ->
  REVOGADO) com o mesmo padrao de atribuicao pessoal.
- Migracao V18: schema (revisor/publicador atribuido, novos timestamps) +
  backfill de papeis (APROVADOR->APROV, EDIT para quem ja usava o sistema,
  exceto Admin).
- Duas telas novas (RevisaoPage/PublicacaoPage), cada uma mostrando so a fila
  pessoal de quem esta logado; HomePage perde as acoes de aprovar/publicar/
  revogar. Novos componentes SelecionarPessoaDialog.vue (seletor de pessoa por
  papel+OM) e PublicarDialog.vue (formulario de portaria/BCA, extraido da
  HomePage para ser reusado pela tela de Publicacao).
- Editor libera edicao para o Aprovador atribuido durante EM_REVISAO.

Testado ao vivo o fluxo completo